Art Of War replacing standard Scenario